onlyargs_derive/compile_tests/required_string.rs
#[derive(Debug, onlyargs_derive::OnlyArgs)]
struct Args {
    #[required]
    required_string: String,
}

fn main() {}
